# agi2

./: .gitignore  CLAUDE.md  CONFIGURATION_GUIDE.md  CURSOR.md  GPU_MEMORY_ESTIMATION.md  README.md  SPEC.md  TRAINING_OPTIMIZATIONS.md  agi2_generate.py  agi2_generate_beam.py  agi2_interactive.py  agi2_train.py  check_cuda.py  estimate_memory.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
agi2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: SPEC_SIMILARITY_TRAINING.md
examples/: memory_estimation_examples.py
pjpd/: agi2.txt  ideas.txt
resources/: bigwill.toml  default.toml  large_model.toml  lilwill.toml  moby_dick.toml  rj.toml  small_model.toml
resources/training/: corpus.txt  corpus01.txt  corpus20.txt
semantic/: CONFIGURATION_GUIDE.md  README.md  SPEC_SIMILARITY_TRAINING.md  agi2_generate.py  agi2_generate_beam.py  agi2_train.py
semantic/resources/: large_model.toml  lilwill.toml  moby_dick.toml  rj.toml  small_model.toml
semantic/resources/training/: corpus20.txt
semantic/src/: __init__.py  config.py  cosine_loss.py  dataset.py  generation.py  training.py  utils.py
semantic/tests/: benchmark_training_optimizations.py  test_config_loader.py  test_cuda_utils.py  test_dataset.py  test_embeddings.py  test_ffn.py  test_sources_list.py  test_tiktoken_tokenizer.py  test_training_config.py  test_training_resume.py  test_utils.py
src/: __init__.py  attention.py  basic_tokenizer.py  bpe_tokenizer.py  config.py  config_loader.py  cosine_loss.py  cuda_utils.py  dataset.py  embeddings.py  ffn.py  generation.py  interactive.py  model.py  tiktoken_tokenizer.py  tokenizer.py  training.py  transformer.py  utils.py
tests/: __init__.py  benchmark_training_optimizations.py  test_attention.py  test_basic_tokenizer.py  test_bpe_tokenizer.py  test_config.py  test_config_loader.py  test_cosine_loss.py  test_cuda_utils.py  test_dataset.py  test_embeddings.py  test_ffn.py  test_generation.py  test_interactive.py  test_memory_estimation.py  test_model.py  test_sources_list.py  test_tokenizer.py  test_training.py  test_training_config.py  test_training_optimizations.py  test_training_resume.py  test_transformer.py  test_utils.py
